--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.password=dost1234
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 #hibernate config
 spring.jpa.database-platform=org.hibernate.dialect.Oracle12cDialect
+
+#server
+server.port=8085
